[package]
name = "cwcat"
description = "A library that can concatenate videos from the game Content Warning"
authors = ["strangejune <june@strangejune.xyz>"]
license = "MIT"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matroska-demuxer = "0.5.0"
webm = "1.1.1"
